--- a/dependencies/AirtableTest.Dependencies.csproj
+++ b/dependencies/AirtableTest.Dependencies.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Hypar.Elements" Version="0.8.0" />
+    <PackageReference Include="Hypar.Elements" Version="0.9.7" />
+    <PackageReference Include="Hypar.Functions" Version="0.9.10" />
   </ItemGroup>
 
 </Project>
